--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,10 @@ h6 {
  *  home top
  * -------------------------------------------- */
 .topnav {
-    font-size: 14px; 
+    font-size: 14px;
 }
 
-.navbar-brand .img-rounded { 
+.navbar-brand .img-rounded {
 	margin: -20px 0 0 -15px;
 }
 
@@ -49,7 +49,7 @@ h6 {
 
 .top-logo {
 	max-width: 100%;
-	height: auto; 
+	height: auto;
 }
 
 .intro-cover img {
@@ -66,22 +66,22 @@ h6 {
 }
 
 @media(max-width:1199px) {
-	
+
 	.intro-message > h1 {
     	font-size: 3em;
 	}
-	
+
 	.intro-message > h2 {
     	font-size: 1.4em;
 	}
 }
 
 @media(max-width:767px) {
-	
-	.navbar-brand .img-rounded { 
+
+	.navbar-brand .img-rounded {
 		margin: -17px 0 0;
 	}
-	
+
 	.intro-message {
         padding-bottom: 15%;
     }
@@ -89,7 +89,7 @@ h6 {
      .intro-message > h1 {
         font-size: 2.2em;
     }
-	
+
 	.intro-message > h2 {
     	font-size: 1.1em;
 	}
@@ -163,7 +163,7 @@ h6 {
 .banner {
     padding: 50px 0;
     color: #000000;
-	background: url(../img/banner-bg.jpg) no-repeat 
+	background: url(../img/banner-bg.jpg) no-repeat
 	center center;
     background-size: cover;
 }
@@ -177,7 +177,7 @@ h6 {
 .banner-cover {
     padding: 50px 0;
     color: #000000;
-	background: url(../img/banner-bg.jpg) no-repeat 
+	background: url(../img/banner-bg.jpg) no-repeat
 	center center;
     background-size: cover;
 	margin-top: -25px;
@@ -386,4 +386,21 @@ section {
 	margin-right: 10px !important;
 	font-size: 24px;
 	margin-top: 5px;
+}
+
+.presentation-speaker {
+        color: #888888;
+}
+
+.presentation-title {
+        font-weight: bolder;
+        color: #000000;
+}
+
+tr.table-bottom-line {
+        border-bottom:1px #CCCC solid;
+}
+
+td.table-right-padding {
+        padding: 0px 20px 0px 0px;
 }
